--- a/404.html
+++ b/404.html
@@ -13,9 +13,9 @@
 <div id="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-org0e51910" class="outline-2">
-<h2 id="org0e51910">404 - page not found</h2>
-<div class="outline-text-2" id="text-org0e51910">
+<div id="outline-container-org19f1c16" class="outline-2">
+<h2 id="org19f1c16">404 - page not found</h2>
+<div class="outline-text-2" id="text-org19f1c16">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
