--- a/convolution.html
+++ b/convolution.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-orgb994ef1" class="outline-2">
-<h2 id="orgb994ef1">Convolution</h2>
-<div class="outline-text-2" id="text-orgb994ef1">
+<div id="outline-container-orgac700cc" class="outline-2">
+<h2 id="orgac700cc">Convolution</h2>
+<div class="outline-text-2" id="text-orgac700cc">
 <p>
 Convolution is, to me at least, a really inspirational subject. Why?
 Because it can initially seem like DSP magic, but it's really not hard
@@ -46,9 +46,9 @@ bother.
 </p>
 </div>
 
-<div id="outline-container-org6d1b0d8" class="outline-3">
-<h3 id="org6d1b0d8">What can convolution do for us?</h3>
-<div class="outline-text-3" id="text-org6d1b0d8">
+<div id="outline-container-org13199a2" class="outline-3">
+<h3 id="org13199a2">What can convolution do for us?</h3>
+<div class="outline-text-3" id="text-org13199a2">
 <p>
 Quite a lot actually. We can use convolution to model any <b>linear time
 invariant</b> (LTI) system. Let's explore that term:
@@ -150,9 +150,9 @@ do so.
 </div>
 </div>
 
-<div id="outline-container-org9c423e8" class="outline-3">
-<h3 id="org9c423e8">Do LTI systems exist?</h3>
-<div class="outline-text-3" id="text-org9c423e8">
+<div id="outline-container-orgf693bcb" class="outline-3">
+<h3 id="orgf693bcb">Do LTI systems exist?</h3>
+<div class="outline-text-3" id="text-orgf693bcb">
 <p>
 <i>"What what? You just told us that a whole heap of stuff is LTI!"</i>
 </p>
@@ -176,9 +176,9 @@ stealing the room's soul. Magic, right?
 </div>
 </div>
 
-<div id="outline-container-org8403d03" class="outline-3">
-<h3 id="org8403d03">OK, lets convolve!</h3>
-<div class="outline-text-3" id="text-org8403d03">
+<div id="outline-container-org5d9c080" class="outline-3">
+<h3 id="org5d9c080">OK, lets convolve!</h3>
+<div class="outline-text-3" id="text-org5d9c080">
 <p>
 Before going any further, I should point out that the mathematical
 operator for convolution is often drawn as an asterisk: * . This is a
@@ -319,9 +319,9 @@ together.</b>
 </div>
 </div>
 
-<div id="outline-container-orgfca39e7" class="outline-3">
-<h3 id="orgfca39e7">Why do we do the flip?</h3>
-<div class="outline-text-3" id="text-orgfca39e7">
+<div id="outline-container-orgf5b1f3b" class="outline-3">
+<h3 id="orgf5b1f3b">Why do we do the flip?</h3>
+<div class="outline-text-3" id="text-orgf5b1f3b">
 <p>
 We need to flip g because we want the <b>beginning of g</b> to meet the
 <b>beginning of f</b> first, and the <b>end of g</b> to meet the <b>end of f</b> last,
@@ -339,7 +339,7 @@ and the other as the input.
 </div>
 </div>
 
-<div id="outline-container-org5cc1887" class="outline-3">
+<div id="outline-container-orgca94d33" class="outline-3">
 <h3 id="impulse-responses">Impulse Responses</h3>
 <div class="outline-text-3" id="text-impulse-responses">
 <p>
