--- a/dft.html
+++ b/dft.html
@@ -39,9 +39,9 @@
 </p>
 
 
-<div id="outline-container-org15d0f5d" class="outline-2">
-<h2 id="org15d0f5d">Discrete Fourier Transform</h2>
-<div class="outline-text-2" id="text-org15d0f5d">
+<div id="outline-container-orgf48a81d" class="outline-2">
+<h2 id="orgf48a81d">Discrete Fourier Transform</h2>
+<div class="outline-text-2" id="text-orgf48a81d">
 <p>
 This is just my understanding / intuitive explanation of what this algorithm means.
 </p>
@@ -74,9 +74,9 @@ and phase?"</i></li>
 </ul>
 </div>
 
-<div id="outline-container-org4679db6" class="outline-3">
-<h3 id="org4679db6">A Roundabout Introduction</h3>
-<div class="outline-text-3" id="text-org4679db6">
+<div id="outline-container-org356a7e2" class="outline-3">
+<h3 id="org356a7e2">A Roundabout Introduction</h3>
+<div class="outline-text-3" id="text-org356a7e2">
 <p>
 <a href="https://en.wikipedia.org/wiki/Joseph_Fourier">Joseph Fourier</a>
 was a French mathematician who was doing his thing at the end of the 18th to
@@ -90,9 +90,9 @@ sinusoids.
 </p>
 </div>
 
-<div id="outline-container-org8903d6f" class="outline-4">
-<h4 id="org8903d6f">Sinusoids, circles and epicycles</h4>
-<div class="outline-text-4" id="text-org8903d6f">
+<div id="outline-container-orgbdd3e71" class="outline-4">
+<h4 id="orgbdd3e71">Sinusoids, circles and epicycles</h4>
+<div class="outline-text-4" id="text-orgbdd3e71">
 <p>
 Let's start by thinking of a sinusoid as an aspect of circular movement
 in relation to time. As we probably all learned in school at some stage,
@@ -183,9 +183,9 @@ here, and the end result is intuitive.
 </div>
 </div>
 
-<div id="outline-container-org091db41" class="outline-4">
-<h4 id="org091db41">Amplitude and Phase</h4>
-<div class="outline-text-4" id="text-org091db41">
+<div id="outline-container-org6f13c8e" class="outline-4">
+<h4 id="org6f13c8e">Amplitude and Phase</h4>
+<div class="outline-text-4" id="text-org6f13c8e">
 <p>
 What we do need is a method to find out <b>which sinusoids</b> are in a given
 signal. Just the frequency of those sinusoids isn't enough information.
@@ -241,9 +241,9 @@ of the article
 </div>
 </div>
 
-<div id="outline-container-org63ce316" class="outline-3">
-<h3 id="org63ce316">Imaginary and Complex Numbers</h3>
-<div class="outline-text-3" id="text-org63ce316">
+<div id="outline-container-orga9044e5" class="outline-3">
+<h3 id="orga9044e5">Imaginary and Complex Numbers</h3>
+<div class="outline-text-3" id="text-orga9044e5">
 <p>
 \[i = \sqrt{−1}\]
 </p>
@@ -321,9 +321,9 @@ boot up some other concepts we'll need.
 </div>
 </div>
 
-<div id="outline-container-orgec9b2a3" class="outline-3">
-<h3 id="orgec9b2a3">Euler's Number</h3>
-<div class="outline-text-3" id="text-orgec9b2a3">
+<div id="outline-container-org964aa5d" class="outline-3">
+<h3 id="org964aa5d">Euler's Number</h3>
+<div class="outline-text-3" id="text-org964aa5d">
 <p>
 Usually known as simply e, Euler's number is a mathematical constant.
 It's a real,
@@ -334,9 +334,9 @@ how we get to e through an analogy to compound interest.
 </p>
 </div>
 
-<div id="outline-container-orgcbf66cb" class="outline-4">
-<h4 id="orgcbf66cb">Growth</h4>
-<div class="outline-text-4" id="text-orgcbf66cb">
+<div id="outline-container-org4f7b140" class="outline-4">
+<h4 id="org4f7b140">Growth</h4>
+<div class="outline-text-4" id="text-org4f7b140">
 <p>
 This section seems pretty unrelated at first, but it's actually key to
 understanding the DFT. I should add that this bank loan analogy is just
@@ -453,7 +453,7 @@ help us make a tool for seeking out sinusoids in a signal.
 </div>
 </div>
 
-<div id="outline-container-orga8cccd7" class="outline-4">
+<div id="outline-container-org77fd022" class="outline-4">
 <h4 id="imaginary-growth-is-anticlockwise-rotation">Imaginary Growth is Anticlockwise Rotation</h4>
 <div class="outline-text-4" id="text-imaginary-growth-is-anticlockwise-rotation">
 <p>
@@ -508,9 +508,9 @@ The upshot is we can use e to make circles. This is the basis of the
 </div>
 </div>
 
-<div id="outline-container-org2fbe097" class="outline-3">
-<h3 id="org2fbe097">Complex sinusoid</h3>
-<div class="outline-text-3" id="text-org2fbe097">
+<div id="outline-container-orgd35f772" class="outline-3">
+<h3 id="orgd35f772">Complex sinusoid</h3>
+<div class="outline-text-3" id="text-orgd35f772">
 <p>
 The complex sinusoid is really just the sum of two sinusoids, one real
 and one imaginary. These two sinusoids are in <i>phase quadrature</i>, which
@@ -588,9 +588,9 @@ Using a complex sinusoid helps us keep it all compact and tidy.
 </div>
 </div>
 
-<div id="outline-container-org9c86d38" class="outline-3">
-<h3 id="org9c86d38">The Discrete Fourier Transform</h3>
-<div class="outline-text-3" id="text-org9c86d38">
+<div id="outline-container-org7e09b40" class="outline-3">
+<h3 id="org7e09b40">The Discrete Fourier Transform</h3>
+<div class="outline-text-3" id="text-org7e09b40">
 <p>
 We've got all the bits we need! We're going to just dive in:
 </p>
@@ -686,9 +686,9 @@ You may be asking yourself&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org7895f41" class="outline-4">
-<h4 id="org7895f41">Why are we multiplying our input signal by sinusoids?</h4>
-<div class="outline-text-4" id="text-org7895f41">
+<div id="outline-container-orge19378d" class="outline-4">
+<h4 id="orge19378d">Why are we multiplying our input signal by sinusoids?</h4>
+<div class="outline-text-4" id="text-orge19378d">
 <p>
 The complex sinusoid is different for each bin. It's frequency is set by
 k. This complex sinusoid hunts for a sinusoid that matches it in our
@@ -760,9 +760,9 @@ through some examples:
 </div>
 </div>
 
-<div id="outline-container-org5f41f92" class="outline-4">
-<h4 id="org5f41f92">Examples</h4>
-<div class="outline-text-4" id="text-org5f41f92">
+<div id="outline-container-org682aceb" class="outline-4">
+<h4 id="org682aceb">Examples</h4>
+<div class="outline-text-4" id="text-org682aceb">
 <p>
 We'll start with a signal to test. Here's a signal made from two
 sinusoids. We'll use the just the real part of the DFT to find out which
@@ -857,7 +857,7 @@ a static frequency spectrum of that sound.
 </div>
 </div>
 
-<div id="outline-container-orgddf30dd" class="outline-3">
+<div id="outline-container-org4d5b038" class="outline-3">
 <h3 id="some-properties-of-the-dft">Some Properties of the DFT</h3>
 <div class="outline-text-3" id="text-some-properties-of-the-dft">
 <p>
@@ -915,7 +915,7 @@ you'll have to divide it by N.
 </div>
 </div>
 
-<div id="outline-container-orgb5fe893" class="outline-3">
+<div id="outline-container-orgf8869fc" class="outline-3">
 <h3 id="where-next">Where next?</h3>
 <div class="outline-text-3" id="text-where-next">
 <p>
