--- a/how-this-blog-works.html
+++ b/how-this-blog-works.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org180bc36" class="outline-2">
-<h2 id="org180bc36">How this blog works</h2>
-<div class="outline-text-2" id="text-org180bc36">
+<div id="outline-container-orgee703a8" class="outline-2">
+<h2 id="orgee703a8">How this blog works</h2>
+<div class="outline-text-2" id="text-orgee703a8">
 <p>
 Thought I'd share a few details about it because I've been looking for the right 
 blogging method for me, and finally I've fallen on something that I think will work 
@@ -26,9 +26,9 @@ nicely.
 </p>
 </div>
 
-<div id="outline-container-org8142cf4" class="outline-3">
-<h3 id="org8142cf4">Org mode</h3>
-<div class="outline-text-3" id="text-org8142cf4">
+<div id="outline-container-org8528e95" class="outline-3">
+<h3 id="org8528e95">Org mode</h3>
+<div class="outline-text-3" id="text-org8528e95">
 <p>
 Org mode is a markup format that comes from the Emacs world (although it is used outside
 Emacs as well). It's nice to write in because the marked-up text is still very clean 
@@ -76,9 +76,9 @@ convert my blog posts to html.
 </div>
 
 
-<div id="outline-container-org191b666" class="outline-3">
-<h3 id="org191b666">Github pages</h3>
-<div class="outline-text-3" id="text-org191b666">
+<div id="outline-container-org9e60816" class="outline-3">
+<h3 id="org9e60816">Github pages</h3>
+<div class="outline-text-3" id="text-org9e60816">
 <p>
 You can <a href="https://github.com/larzeitlin/blog">see the repo here</a>. Github pages detects the <code>index.html</code>, which then links to the 
 other files.
@@ -86,9 +86,9 @@ other files.
 </div>
 </div>
 
-<div id="outline-container-org2cdca9e" class="outline-3">
-<h3 id="org2cdca9e">Thanks</h3>
-<div class="outline-text-3" id="text-org2cdca9e">
+<div id="outline-container-org62c897a" class="outline-3">
+<h3 id="org62c897a">Thanks</h3>
+<div class="outline-text-3" id="text-org62c897a">
 <p>
 This was inspired by <a href="https://systemcrafters.net/publishing-websites-with-org-mode/building-the-site/">System Crafters</a>. So thanks to David for that and all his great content.
 </p>
