--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org4ab9d6a" class="outline-2">
-<h2 id="org4ab9d6a">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org4ab9d6a">
+<div id="outline-container-orge5de5c5" class="outline-2">
+<h2 id="orge5de5c5">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-orge5de5c5">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org09b20e8" class="outline-3">
-<h3 id="org09b20e8">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-org09b20e8">
+<div id="outline-container-org5764763" class="outline-3">
+<h3 id="org5764763">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org5764763">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-orgb2a4304" class="outline-4">
-<h4 id="orgb2a4304">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-orgb2a4304">
+<div id="outline-container-orgc3bdd52" class="outline-4">
+<h4 id="orgc3bdd52">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-orgc3bdd52">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-orgf7b0f97" class="outline-4">
-<h4 id="orgf7b0f97">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-orgf7b0f97">
+<div id="outline-container-org0a282c5" class="outline-4">
+<h4 id="org0a282c5">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-org0a282c5">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-orgd634833" class="outline-3">
-<h3 id="orgd634833">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-orgd634833">
+<div id="outline-container-org1346df8" class="outline-3">
+<h3 id="org1346df8">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-org1346df8">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-orgb742345" class="outline-3">
-<h3 id="orgb742345">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-orgb742345">
+<div id="outline-container-org69b1637" class="outline-3">
+<h3 id="org69b1637">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-org69b1637">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org1d6ac5d" class="outline-3">
-<h3 id="org1d6ac5d">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org1d6ac5d">
+<div id="outline-container-org8126d7c" class="outline-3">
+<h3 id="org8126d7c">SSB Modulation</h3>
+<div class="outline-text-3" id="text-org8126d7c">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-org4ec7450" class="outline-3">
-<h3 id="org4ec7450">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-org4ec7450">
+<div id="outline-container-orgaa15039" class="outline-3">
+<h3 id="orgaa15039">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-orgaa15039">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-orge41dfba" class="outline-4">
-<h4 id="orge41dfba">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-orge41dfba">
+<div id="outline-container-orgff3f448" class="outline-4">
+<h4 id="orgff3f448">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-orgff3f448">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-orgad5e6fe" class="outline-3">
-<h3 id="orgad5e6fe">Aliasing</h3>
-<div class="outline-text-3" id="text-orgad5e6fe">
+<div id="outline-container-orgcb0ab0e" class="outline-3">
+<h3 id="orgcb0ab0e">Aliasing</h3>
+<div class="outline-text-3" id="text-orgcb0ab0e">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-orga7e2985" class="outline-3">
-<h3 id="orga7e2985">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-orga7e2985">
+<div id="outline-container-orgbcab2ce" class="outline-3">
+<h3 id="orgbcab2ce">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-orgbcab2ce">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
