--- a/convolution.html
+++ b/convolution.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org56bb414" class="outline-2">
-<h2 id="org56bb414">Convolution</h2>
-<div class="outline-text-2" id="text-org56bb414">
+<div id="outline-container-orgee090ff" class="outline-2">
+<h2 id="orgee090ff">Convolution</h2>
+<div class="outline-text-2" id="text-orgee090ff">
 <p>
 Convolution is, to me at least, a really inspirational subject. Why?
 Because it can initially seem like DSP magic, but it's really not hard
@@ -46,9 +46,9 @@ bother.
 </p>
 </div>
 
-<div id="outline-container-org26a75a3" class="outline-3">
-<h3 id="org26a75a3">What can convolution do for us?</h3>
-<div class="outline-text-3" id="text-org26a75a3">
+<div id="outline-container-orgca4ae8f" class="outline-3">
+<h3 id="orgca4ae8f">What can convolution do for us?</h3>
+<div class="outline-text-3" id="text-orgca4ae8f">
 <p>
 Quite a lot actually. We can use convolution to model any <b>linear time
 invariant</b> (LTI) system. Let's explore that term:
@@ -150,9 +150,9 @@ do so.
 </div>
 </div>
 
-<div id="outline-container-orgdc82812" class="outline-3">
-<h3 id="orgdc82812">Do LTI systems exist?</h3>
-<div class="outline-text-3" id="text-orgdc82812">
+<div id="outline-container-org6ecf176" class="outline-3">
+<h3 id="org6ecf176">Do LTI systems exist?</h3>
+<div class="outline-text-3" id="text-org6ecf176">
 <p>
 <i>"What what? You just told us that a whole heap of stuff is LTI!"</i>
 </p>
@@ -176,9 +176,9 @@ stealing the room's soul. Magic, right?
 </div>
 </div>
 
-<div id="outline-container-org7563ea4" class="outline-3">
-<h3 id="org7563ea4">OK, lets convolve!</h3>
-<div class="outline-text-3" id="text-org7563ea4">
+<div id="outline-container-orgae4bdf7" class="outline-3">
+<h3 id="orgae4bdf7">OK, lets convolve!</h3>
+<div class="outline-text-3" id="text-orgae4bdf7">
 <p>
 Before going any further, I should point out that the mathematical
 operator for convolution is often drawn as an asterisk: * . This is a
@@ -319,9 +319,9 @@ together.</b>
 </div>
 </div>
 
-<div id="outline-container-org92efcbb" class="outline-3">
-<h3 id="org92efcbb">Why do we do the flip?</h3>
-<div class="outline-text-3" id="text-org92efcbb">
+<div id="outline-container-org1ca5b40" class="outline-3">
+<h3 id="org1ca5b40">Why do we do the flip?</h3>
+<div class="outline-text-3" id="text-org1ca5b40">
 <p>
 We need to flip g because we want the <b>beginning of g</b> to meet the
 <b>beginning of f</b> first, and the <b>end of g</b> to meet the <b>end of f</b> last,
@@ -339,7 +339,7 @@ and the other as the input.
 </div>
 </div>
 
-<div id="outline-container-org300f4e2" class="outline-3">
+<div id="outline-container-org8289a25" class="outline-3">
 <h3 id="impulse-responses">Impulse Responses</h3>
 <div class="outline-text-3" id="text-impulse-responses">
 <p>
