--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-orge5de5c5" class="outline-2">
-<h2 id="orge5de5c5">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-orge5de5c5">
+<div id="outline-container-org16f0472" class="outline-2">
+<h2 id="org16f0472">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-org16f0472">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org5764763" class="outline-3">
-<h3 id="org5764763">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-org5764763">
+<div id="outline-container-org1929623" class="outline-3">
+<h3 id="org1929623">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org1929623">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-orgc3bdd52" class="outline-4">
-<h4 id="orgc3bdd52">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-orgc3bdd52">
+<div id="outline-container-org2723c5c" class="outline-4">
+<h4 id="org2723c5c">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-org2723c5c">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-org0a282c5" class="outline-4">
-<h4 id="org0a282c5">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-org0a282c5">
+<div id="outline-container-org3e935a0" class="outline-4">
+<h4 id="org3e935a0">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-org3e935a0">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-org1346df8" class="outline-3">
-<h3 id="org1346df8">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-org1346df8">
+<div id="outline-container-orgf632bd9" class="outline-3">
+<h3 id="orgf632bd9">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-orgf632bd9">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-org69b1637" class="outline-3">
-<h3 id="org69b1637">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-org69b1637">
+<div id="outline-container-org2e30e44" class="outline-3">
+<h3 id="org2e30e44">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-org2e30e44">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org8126d7c" class="outline-3">
-<h3 id="org8126d7c">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org8126d7c">
+<div id="outline-container-orgbd2726b" class="outline-3">
+<h3 id="orgbd2726b">SSB Modulation</h3>
+<div class="outline-text-3" id="text-orgbd2726b">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-orgaa15039" class="outline-3">
-<h3 id="orgaa15039">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-orgaa15039">
+<div id="outline-container-org2594f94" class="outline-3">
+<h3 id="org2594f94">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org2594f94">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-orgff3f448" class="outline-4">
-<h4 id="orgff3f448">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-orgff3f448">
+<div id="outline-container-org5d9a244" class="outline-4">
+<h4 id="org5d9a244">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-org5d9a244">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-orgcb0ab0e" class="outline-3">
-<h3 id="orgcb0ab0e">Aliasing</h3>
-<div class="outline-text-3" id="text-orgcb0ab0e">
+<div id="outline-container-org1cd05d9" class="outline-3">
+<h3 id="org1cd05d9">Aliasing</h3>
+<div class="outline-text-3" id="text-org1cd05d9">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-orgbcab2ce" class="outline-3">
-<h3 id="orgbcab2ce">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-orgbcab2ce">
+<div id="outline-container-org59b9952" class="outline-3">
+<h3 id="org59b9952">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org59b9952">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
