missing code block

--- a/404.html
+++ b/404.html
@@ -13,9 +13,9 @@
 <div id="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-org6af75dd" class="outline-2">
-<h2 id="org6af75dd">404 - page not found</h2>
-<div class="outline-text-2" id="text-org6af75dd">
+<div id="outline-container-orgb08631d" class="outline-2">
+<h2 id="orgb08631d">404 - page not found</h2>
+<div class="outline-text-2" id="text-orgb08631d">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
