--- a/how-this-blog-works.html
+++ b/how-this-blog-works.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-orgbac7eee" class="outline-2">
-<h2 id="orgbac7eee">How this blog works</h2>
-<div class="outline-text-2" id="text-orgbac7eee">
+<div id="outline-container-org07e6edf" class="outline-2">
+<h2 id="org07e6edf">How this blog works</h2>
+<div class="outline-text-2" id="text-org07e6edf">
 <p>
 Thought I'd share a few details about it because I've been looking for the right 
 blogging method for me, and finally I've fallen on something that I think will work 
@@ -26,9 +26,9 @@ nicely.
 </p>
 </div>
 
-<div id="outline-container-orgdc0f383" class="outline-3">
-<h3 id="orgdc0f383">Org mode</h3>
-<div class="outline-text-3" id="text-orgdc0f383">
+<div id="outline-container-orga78b431" class="outline-3">
+<h3 id="orga78b431">Org mode</h3>
+<div class="outline-text-3" id="text-orga78b431">
 <p>
 Org mode is a markup format that comes from the Emacs world (although it is used outside
 Emacs as well). It's nice to write in because the marked-up text is still very clean 
@@ -76,9 +76,9 @@ convert my blog posts to html.
 </div>
 
 
-<div id="outline-container-orgedaae8e" class="outline-3">
-<h3 id="orgedaae8e">Github pages</h3>
-<div class="outline-text-3" id="text-orgedaae8e">
+<div id="outline-container-org9f88439" class="outline-3">
+<h3 id="org9f88439">Github pages</h3>
+<div class="outline-text-3" id="text-org9f88439">
 <p>
 You can <a href="https://github.com/larzeitlin/blog">see the repo here</a>. Github pages detects the <code>index.html</code>, which then links to the 
 other files.
@@ -86,9 +86,9 @@ other files.
 </div>
 </div>
 
-<div id="outline-container-orgfe5d21d" class="outline-3">
-<h3 id="orgfe5d21d">Thanks</h3>
-<div class="outline-text-3" id="text-orgfe5d21d">
+<div id="outline-container-orgaa78d19" class="outline-3">
+<h3 id="orgaa78d19">Thanks</h3>
+<div class="outline-text-3" id="text-orgaa78d19">
 <p>
 This was inspired by <a href="https://systemcrafters.net/publishing-websites-with-org-mode/building-the-site/">System Crafters</a>. So thanks to David for that and all his great content.
 </p>
